--- a/package.json
+++ b/package.json
@@ -4,5 +4,19 @@
   "main": "index.js",
   "repository": "https://github.com/Marcuslyj/toy-vue3.git",
   "author": "Marcus <814712074@qq.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
+  "scripts": {
+    "build": "node scripts/build.js"
+  },
+  "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "rollup": "^2.58.0",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "typescript": "^4.4.4"
+  }
 }
